fixed overflow issues

--- a/src/index.css
+++ b/src/index.css
@@ -1,75 +1,77 @@
 :root {
-  font-family: "ClashDisplay", sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-  color-scheme: light dark;
-  color: #faf7f7;
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-  overflow: none;
+    font-family: "ClashDisplay", sans-serif;
+    line-height: 1.5;
+    font-weight: 400;
+    color-scheme: light dark;
+    color: #faf7f7;
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-text-size-adjust: 100%;
+    overflow: none;
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+    font-weight: 500;
+    color: #646cff;
+    text-decoration: inherit;
 }
 
 a:hover {
-  color: #535bf2;
+    color: #535bf2;
 }
 
 body {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  font-family: "ClashDisplay", sans-serif;
-  font-weight: 450;
-  overflow: none !important;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    font-family: "ClashDisplay", sans-serif;
+    font-weight: 450;
+    overflow: hidden !important;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+    font-size: 3.2em;
+    line-height: 1.1;
 }
 
 @media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+     :root {
+        color: #213547;
+        background-color: #ffffff;
+    }
+    a:hover {
+        color: #747bff;
+    }
+    button {
+        background-color: #f9f9f9;
+    }
 }
+
 
 /* Set the scrollbar width */
 
 ::-webkit-scrollbar {
-  width: 10px;
+    width: 10px;
 }
+
 
 /* Adding padding to the track to prevent the thumb from touching the top and bottom */
 
 ::-webkit-scrollbar-track {
-  background: none;
-  padding-top: 10px;
-  padding-bottom: 10px;
+    background: none;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #888;
-  border-radius: 10px;
-  border: 3px solid;
-  border-color: white;
+    background: #888;
+    border-radius: 10px;
+    border: 3px solid;
+    border-color: white;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+    background: #555;
 }
